Javafx Implementation - Dependencies in maven - hello-view.fxml - styles.css - module-info.java